# disasm6502

./: .travis.yml  Cargo.toml  LICENSE  README.md  appveyor.yml
examples/: disasm.rs  disasm6502.rs
src/: error.rs  instruction.rs  lib.rs
tests/: lib.rs
