[package]
name = "disasm6502"
version = "0.1.0"
description = "6502 disassembler, complete with a working example."
keywords = ["disasm", "disassembler", "asm", "assembler", "6502"]
license = "MIT/Apache-2.0"
authors = ["Krzysztof Kondrak <krzysztof.kondrak@gmail.com>"]
repository = "https://github.com/kondrak/disasm6502"
homepage = "https://github.com/kondrak/disasm6502"
documentation = "https://kondrak.github.io/disasm6502/disasm6502/index.html"

[dependencies]
